# pr_resume_parser

./: .env.example  .gitignore  README.md  pyproject.toml  resume_parser.py  sample.docx
datamodel/: extraction_model.py
parser/: file_parser.py
test/: test_all.py
