[project]
name = "pr-resume-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "pydantic>=2.12.3",
    "pypdf>=6.1.3",
    "pytest>=8.4.2",
    "python-docx>=1.2.0",
    "typing>=3.10.0.0",
]
